fix alignment issue

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -91,7 +91,7 @@ $people-picker-selected-person-avatar-size: var(--people-picker-selected-person-
       display: flex;
       column-gap: 5px;
       border-radius: 100px;
-      margin-top: 3px;
+      margin-top: 4px;
       background-color: $selected-option-bg;
 
       &.highlighted {
